<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/server_header">



        <EditTextPreference
                app:key="addresse_serveur_thermostat_pref"
                app:title="@string/serveur_thermostat_title"
                app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="addresse_broker_pref"
            app:title="@string/serveur_mqtt_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
                app:key="user_name_pref"
                app:title="@string/user_name_title"
                app:useSimpleSummaryProvider="true" />
        <EditTextPreference
                app:key="password_pref"
                app:title="@string/password_title"
                app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/parametre_thermostat_header">

        <EditTextPreference
                app:key="temperature_base_geothermie_pref"
                app:title="@string/temperature_base_geothermie_title"
                app:useSimpleSummaryProvider="true"
            />
        <EditTextPreference
                app:key="topic_thermostat_get_pref"
                app:title="@string/topic_thermostat_get_title"
                app:useSimpleSummaryProvider="true" />
        <EditTextPreference
                app:key="topic_thermostat_set_pref"
                app:title="@string/topic_thermostat_set_title"
                app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/parametre_portail_header">

        <EditTextPreference
                app:key="topic_portail_pref"
                app:title="@string/topic_portail_title"
                app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/parametre_volet_header">

        <EditTextPreference
                app:key="topic_volet_pref"
                app:title="@string/topic_volet_title"
                app:useSimpleSummaryProvider="true"/>
    </PreferenceCategory>




</PreferenceScreen>
