<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DefineT">


    <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toTopOf="@+id/hours_field"
            app:layout_constraintEnd_toStartOf="@+id/FC_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/degre_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/degr_s"
            android:inputType="number|numberDecimal"
            app:layout_constraintBottom_toTopOf="@+id/sendBtn"
            app:layout_constraintEnd_toEndOf="@+id/duree_field"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/duree_field"
            app:layout_constraintTop_toBottomOf="@+id/duree_field" />

    <EditText
            android:id="@+id/hours_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/heure"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/duree_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.51" />

    <Button
            android:id="@+id/sendBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/degre_field"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/degre_field"
            app:layout_constraintTop_toBottomOf="@+id/degre_field" />

    <EditText
            android:id="@+id/duree_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/duree"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/degre_field"
            app:layout_constraintEnd_toEndOf="@+id/hours_field"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/hours_field"
            app:layout_constraintTop_toBottomOf="@+id/hours_field" />

    <Button
            android:id="@+id/retour_define_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retour"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/degre_field"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/degre_field"
            app:layout_constraintTop_toBottomOf="@+id/degre_field" />

    <ToggleButton
            android:id="@+id/FC_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:checked="false"
            android:textOff="Froid"
            android:textOn="Chaud"
            app:layout_constraintBottom_toTopOf="@+id/hours_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/spinner"
            app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

<!--
<ToggleButton
                android:id="@+id/lundi_btn"
                android:text="@string/lundi"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textOff="@string/lundi"
                android:textOn="@string/lundi"
                android:textAllCaps="false"
                android:background="@drawable/button_toggle"
                android:checked="false"
                android:layout_marginBottom="3dp"
                android:onClick="onLundiClicked"/>
        <ToggleButton
                android:id="@+id/mardi_btn"
                android:text="@string/mardi"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textOff="@string/mardi"
                android:textOn="@string/mardi"
                android:textAllCaps="false"
                android:background="@drawable/button_toggle"
                android:checked="false"
                android:layout_marginBottom="3dp"
                android:onClick="onMardiClicked"/>
        <ToggleButton
            android:id="@+id/mercredi_btn"
            android:text="@string/mercredi"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOff="@string/mercredi"
            android:textOn="@string/mercredi"
            android:textAllCaps="false"
            android:background="@drawable/button_toggle"
            android:checked="false"
            android:layout_marginBottom="3dp"

            android:onClick="onMercrediClicked"
    /><ToggleButton
            android:id="@+id/jeudi_btn"
            android:text="@string/jeudi"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOff="@string/jeudi"
            android:textOn="@string/jeudi"
            android:textAllCaps="false"
            android:background="@drawable/button_toggle"
            android:checked="false"
            android:layout_marginBottom="3dp"

            android:onClick="onJeudiClicked"
    /><ToggleButton
            android:id="@+id/vendredi_btn"
            android:text="@string/vendredi"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOff="@string/vendredi"
            android:textOn="@string/vendredi"
            android:textAllCaps="false"
            android:background="@drawable/button_toggle"
            android:checked="false"
            android:layout_marginBottom="3dp"

            android:onClick="onVendrediClicked"
    /><ToggleButton
            android:id="@+id/samedi_btn"
            android:text="@string/samedi"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOff="@string/samedi"
            android:textOn="@string/samedi"
            android:textAllCaps="false"
            android:background="@drawable/button_toggle"
            android:checked="false"
            android:layout_marginBottom="3dp"

            android:onClick="onSamediClicked"
    /><ToggleButton
            android:id="@+id/dimanche_btn"
            android:text="@string/dimanche"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOff="@string/dimanche"
            android:textOn="@string/dimanche"
            android:textAllCaps="false"
            android:background="@drawable/button_toggle"
            android:checked="false"
            android:onClick="onDimancheClicked"
    />

-->